--- a/package.json
+++ b/package.json
@@ -10,8 +10,24 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^18.7.3",
+    "@react-native-firebase/auth": "^18.7.3",
+    "@react-native-firebase/firestore": "^18.7.3",
+    "@react-native-firebase/messaging": "^18.7.3",
+    "@react-native-firebase/storage": "^18.7.3",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "apisauce": "^3.0.1",
     "react": "18.2.0",
-    "react-native": "0.73.1"
+    "react-native": "0.73.1",
+    "react-native-encrypted-storage": "^4.0.3",
+    "react-native-image-picker": "^7.1.0",
+    "react-native-image-resizer": "^1.4.5",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "^3.29.0",
+    "react-native-vector-icons": "^10.0.3",
+    "styled-components": "^6.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
